layout e logica de cadastro de pessoa

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 	},
 	"require": {
 		"php": ">=5.2.4",
-		 "ext-mysql": "*"
+		 "ext-mysql": "*",
+		 "components/jquery": "1.12.*",
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
